--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "stripe": "^8.131.1"
   },
   "scripts": {
     "start": "node server/server.js",
